# raster-batch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/raster_batch/: __init__.py  checkpoint.py  cli.py  engine.py  errors.py  logging_setup.py  ops.py  progress.py  windows.py
tests/: _workers.py  conftest.py  test_cli.py  test_engine.py  test_logging_and_progress.py  test_ops.py  test_windows.py
