[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raster-batch"
version = "0.1.0"
description = "Parallel batch processor for raster datasets with resumable progress"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "batch-processing.com" }]
keywords = ["gis", "raster", "rasterio", "cli", "batch", "multiprocessing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "rasterio>=1.4",
    "numpy>=1.26",
    "pyproj>=3.6",
]

[project.urls]
Homepage = "https://github.com/batch-processing-geospatial-cli-tools/raster-batch"
Documentation = "https://www.batch-processing.com/spatial-batch-processing-async-workflows/"

[project.scripts]
raster-batch = "raster_batch.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/raster_batch"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "ARG", "PTH", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]

[tool.mypy]
# Analysed as 3.12 even though the package supports 3.11: numpy's bundled stubs use
# PEP 695 `type` statements, which mypy refuses to parse under an older target. The
# 3.11 leg of the CI matrix still runs the full test suite.
python_version = "3.12"
files = ["src"]
strict = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["rasterio.*", "affine.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["raster_batch"]
